--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
     "react-is": "^19.2.4",
+    "react-pdf-html": "^2.1.5",
     "react-quill-new": "^3.8.3",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
